<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/info_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="20dp"
            android:autoLink="all"
            android:text="@string/info_content5" />

        <TextView
            android:id="@+id/info_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autoLink="all"
            android:text="@string/info_content1" />

        <TextView
            android:id="@+id/info_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/info_content2"
            android:textColor="#FF5722" />

        <TextView
            android:id="@+id/info_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_tv3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autoLink="all"
            android:text="@string/info_content3" />

        <TextView
            android:id="@+id/info_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_tv4"
            android:layout_marginStart="297dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:autoLink="all"
            android:text="@string/info_content4"
            android:textStyle="bold"
            android:typeface="monospace" />

    </RelativeLayout>

</LinearLayout>